fixed scrollbar issue

--- a/projects/list/src/app/app.component.css
+++ b/projects/list/src/app/app.component.css
@@ -136,7 +136,9 @@ mat-grid-tile {
 }
 
 .viewport{
-  height: 500px;
+  height: 100vh;
   width: 100%;
   text-align: -webkit-center;
 }
+
+
