--- a/projects/similar/src/app/app.component.css
+++ b/projects/similar/src/app/app.component.css
@@ -28,7 +28,7 @@
 }
 
 .similar-viewport{
-  height: 500px;
+  height: 100vh;
   width: 100%;
   text-align: -webkit-center;
 }
